language/move-lang/tests/move_check/borrows/call_ordering.exp
error[E07002]: mutable ownership violated
  ┌─ tests/move_check/borrows/call_ordering.move:7:13
  │
6 │         let f = &mut s.f;
  │                 -------- Field 'f' is still being mutably borrowed by this reference
7 │         foo(freeze(s), { *f = 0; 1 })
  │             ^^^^^^^^^ Invalid freeze.

error[E07003]: invalid operation, could create dangling a reference
   ┌─ tests/move_check/borrows/call_ordering.move:12:25
   │
12 │         bar(&mut s.f, { s.f = 0; 1 })
   │             --------    ^^^^^^^ Invalid mutation of reference.
   │             │            
   │             It is still being mutably borrowed by this reference

